--- a/package.json
+++ b/package.json
@@ -7,19 +7,28 @@
     "start": "node ./dist/index.js",
     "build": "node_modules/.bin/tsc",
     "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "seed:db": "npx knex seed:run --env development",
+    "migrate:db": "npx knex migrate:latest --env development",
+    "rollback:db": "npx knex migrate:rollback --env development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-handlebars": "^5.3.1",
+    "@types/socket.io": "^3.0.2",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "moment": "^2.29.1"
+    "express-handlebars": "^5.3.3",
+    "socket.io": "^4.1.3",
+    "knex": "^0.95.10",
+    "moment": "^2.29.1",
+    "mysql": "^2.18.1",
+    "sqlite3": "^5.0.2"
   }
 }
