--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
-    "socket.io": "^4.1.3",
     "knex": "^0.95.10",
     "moment": "^2.29.1",
+    "mongoose": "^6.0.5",
     "mysql": "^2.18.1",
+    "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2"
   }
 }
