--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.0.5",
     "mysql": "^2.18.1",
+    "normalizr": "^3.6.1",
     "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2"
   }
