--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^5.3.1",
+    "@types/express-session": "^1.17.4",
     "@types/socket.io": "^3.0.2",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
@@ -26,6 +27,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
+    "express-session": "^1.17.2",
     "firebase-admin": "^9.11.1",
     "knex": "^0.95.10",
     "moment": "^2.29.1",
