se agrega persistencia session en mongo atlas

--- a/.envExample
+++ b/.envExample
@@ -3,6 +3,7 @@ MONGO_ATLAS_PASSWORD=ponelatuya
 MONGO_ATLAS_CLUSTER=miclusterUrl
 MONGO_ATLAS_DBNAME=nombreDB
 MONGO_LOCAL_DBNAME=nombreDB
+MONGO_ATLAS_URL=someurl
 FIREBASE_PRIVATEKEY=firebasePrivateKey_INCLUYENDOCOMILLAS
 FIREBASE_PROJECTID=firebaseProjectID
 FIREBASE_CLIENTEMAIL=firebaseClientEmail
