authentificacion con facebook

--- a/.envExample
+++ b/.envExample
@@ -7,3 +7,5 @@ MONGO_ATLAS_URL=someurl
 FIREBASE_PRIVATEKEY=firebasePrivateKey_INCLUYENDOCOMILLAS
 FIREBASE_PROJECTID=firebaseProjectID
 FIREBASE_CLIENTEMAIL=firebaseClientEmail
+FACEBOOK_APP_ID=yourAppId
+FACEBOOK_APP_SECRET=yourAppSecretPass
