--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express-session": "^1.17.4",
     "@types/mongoose": "^5.11.97",
     "@types/passport": "^1.0.7",
+    "@types/passport-facebook": "^2.1.11",
     "@types/passport-local": "^1.0.34",
     "@types/socket.io": "^3.0.2",
     "nodemon": "^2.0.12",
@@ -43,6 +44,7 @@
     "mysql": "^2.18.1",
     "normalizr": "^3.6.1",
     "passport": "^0.5.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2"
