--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/node": "^16.11.0",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
