--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^5.3.1",
@@ -26,6 +27,7 @@
     "@types/passport": "^1.0.7",
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-local": "^1.0.34",
+    "@types/pino-multi-stream": "^5.1.2",
     "@types/socket.io": "^3.0.2",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
@@ -35,6 +37,7 @@
     "@types/node": "^16.11.0",
     "bcrypt": "^5.0.1",
     "cluster": "^0.7.7",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
@@ -51,6 +54,10 @@
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
+    "pino": "^7.0.5",
+    "pino-multi-stream": "^6.0.0",
+    "pino-pretty": "^7.1.0",
+    "pino-tee": "^0.3.0",
     "pm2": "^5.1.2",
     "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2"
