--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build & node ./dist/index.js",
-    "build": "npm install & node_modules/.bin/tsc",
+    "build": "node_modules/.bin/tsc",
+    "start": "npm install && npm run build && node dist/index.js",
     "dev": "nodemon",
     "seed:db": "npx knex seed:run --env development",
     "migrate:db": "npx knex migrate:latest --env development",
