--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
+    "start": "npm install && npm run build && node ./dist/index.js",
     "build": "node_modules/.bin/tsc",
     "dev": "nodemon",
     "seed:db": "npx knex seed:run --env development",
