se agrega servicio Ethereal, gmail, y SMS twilio

--- a/.envExample
+++ b/.envExample
@@ -9,3 +9,13 @@ FIREBASE_PROJECTID=firebaseProjectID
 FIREBASE_CLIENTEMAIL=firebaseClientEmail
 FACEBOOK_APP_ID=yourAppId
 FACEBOOK_APP_SECRET=yourAppSecretPass
+ETHEREAL_EMAIL=your-email@ethereal.email
+ETHEREAL_PASSWORD=your-password
+ETHEREAL_NAME=you-ethereal-name
+GMAIL_EMAIL=your-email@gmail.com
+GMAIL_PASSWORD=your-gmail-password
+GMAIL_NAME=you-gmail-name
+TWILIO_ACCOUNT_ID=yourTwilioId
+TWILIO_TOKEN=yourTwilioToken
+TWILIO_CELLPHONE=+123456789
+PERSONAL_CELLPHONE=+541112345678
