--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm install && npm run build && node ./dist/index.js",
+    "start": "node ./dist/index.js",
     "build": "node_modules/.bin/tsc",
     "dev": "nodemon",
     "seed:db": "npx knex seed:run --env development",
@@ -24,6 +24,7 @@
     "@types/express-handlebars": "^5.3.1",
     "@types/express-session": "^1.17.4",
     "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-local": "^1.0.34",
@@ -50,6 +51,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.0.5",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.0",
     "normalizr": "^3.6.1",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
@@ -60,6 +62,7 @@
     "pino-tee": "^0.3.0",
     "pm2": "^5.1.2",
     "socket.io": "^4.1.3",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "twilio": "^3.71.1"
   }
 }
