se agrega carga de imagenes en mongo atlas

--- a/.envExample
+++ b/.envExample
@@ -7,3 +7,10 @@ MONGO_ATLAS_URL=someurl
 FIREBASE_PRIVATEKEY=firebasePrivateKey_INCLUYENDOCOMILLAS
 FIREBASE_PROJECTID=firebaseProjectID
 FIREBASE_CLIENTEMAIL=firebaseClientEmail
+GMAIL_EMAIL=your-email@gmail.com
+GMAIL_PASSWORD=your-gmail-password
+GMAIL_NAME=you-gmail-name
+TWILIO_ACCOUNT_ID=yourTwilioId
+TWILIO_TOKEN=yourTwilioToken
+TWILIO_CELLPHONE=+123456789
+PERSONAL_CELLPHONE=+541112345678
