--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^5.3.1",
     "@types/express-session": "^1.17.4",
+    "@types/gridfs-stream": "^0.5.35",
     "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
     "@types/passport-local": "^1.0.34",
     "@types/socket.io": "^3.0.2",
@@ -37,13 +39,20 @@
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
     "firebase-admin": "^9.11.1",
+    "gridfs-stream": "^1.1.1",
+    "joi": "^17.4.2",
     "knex": "^0.95.10",
     "moment": "^2.29.1",
     "mongoose": "^6.0.5",
+    "multer": "^1.4.3",
+    "multer-gridfs-storage": "^5.0.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.0",
     "normalizr": "^3.6.1",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
+    "pino": "^7.1.0",
+    "pino-multi-stream": "^6.0.0",
     "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2"
   }
