cambios tp final entrega 3

--- a/.envExample
+++ b/.envExample
@@ -12,5 +12,8 @@ GMAIL_PASSWORD=your-gmail-password
 GMAIL_NAME=you-gmail-name
 TWILIO_ACCOUNT_ID=yourTwilioId
 TWILIO_TOKEN=yourTwilioToken
-TWILIO_CELLPHONE=+123456789
-PERSONAL_CELLPHONE=+541112345678
+TWILIO_WHATSAPP_CELLPHONE=+14155238886
+ADMINISTRATOR_WHATSAPP_CELLPHONE=+5491155554444
+SESSION_SECRET=mysecrethshhhhhhhasdloiuahsñd
+SESSION_COOKIE_TIMEOUT=10
+SERVER_MODE=CLUSTER
