--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cluster": "^0.7.7",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
@@ -54,6 +55,7 @@
     "pino": "^7.1.0",
     "pino-multi-stream": "^6.0.0",
     "socket.io": "^4.1.3",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "twilio": "^3.71.1"
   }
 }
