--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node ./dist/index.js",
     "build": "node_modules/.bin/tsc",
     "dev": "nodemon",
+    "start:fork": "node ./dist/index.js 8081 FORK",
+    "start:cluster": "node ./dist/index.js 8082 CLUSTER",
+    "artillery:fork": "artillery run artillery/testFork.yml",
+    "artillery:cluster": "artillery run artillery/testCluster.yml",
     "seed:db": "npx knex seed:run --env development",
     "migrate:db": "npx knex migrate:latest --env development",
     "rollback:db": "npx knex migrate:rollback --env development"
