--- a/.envExample
+++ b/.envExample
@@ -2,18 +2,14 @@ MONGO_ATLAS_USER=ponelatuya
 MONGO_ATLAS_PASSWORD=ponelatuya
 MONGO_ATLAS_CLUSTER=miclusterUrl
 MONGO_ATLAS_DBNAME=nombreDB
-MONGO_LOCAL_DBNAME=nombreDB
 MONGO_ATLAS_URL=someurl
-FIREBASE_PRIVATEKEY=firebasePrivateKey_INCLUYENDOCOMILLAS
-FIREBASE_PROJECTID=firebaseProjectID
-FIREBASE_CLIENTEMAIL=firebaseClientEmail
 GMAIL_EMAIL=your-email@gmail.com
-GMAIL_PASSWORD=your-gmail-password
-GMAIL_NAME=you-gmail-name
-TWILIO_ACCOUNT_ID=yourTwilioId
+GMAIL_PASSWORD=your-gmail-password            //aca va la password especial para aplicaciones
+GMAIL_NAME=you-gmail-name                     //Martin Caime
+TWILIO_ACCOUNT_ID=yourTwilioId  
 TWILIO_TOKEN=yourTwilioToken
-TWILIO_WHATSAPP_CELLPHONE=+14155238886
-ADMINISTRATOR_WHATSAPP_CELLPHONE=+5491155554444
+TWILIO_WHATSAPP_CELLPHONE=+14155238886       //este es el celular que figura en la cuenta de twilio
+ADMINISTRATOR_WHATSAPP_CELLPHONE=+5491155554444     //este es el celu personal para recibir los mensajes, hay que conectarlo con twilio
 SESSION_SECRET=mysecrethshhhhhhhasdloiuahsñd
-SESSION_COOKIE_TIMEOUT=10
-SERVER_MODE=CLUSTER
+SESSION_COOKIE_TIMEOUT=10                   //duracion de la session, en este caso son 10 minutos
+SERVER_MODE=CLUSTER                         //CLUSTER o FORK
