--- a/package.json
+++ b/package.json
@@ -35,15 +35,18 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/express-graphql": "^0.9.0",
     "bcrypt": "^5.0.1",
     "cluster": "^0.7.7",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
     "firebase-admin": "^9.11.1",
+    "graphql": "^16.0.1",
     "gridfs-stream": "^1.1.1",
     "joi": "^17.4.2",
     "knex": "^0.95.10",
