se agrega singleton y parton Repository

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "cluster": "^0.7.7",
     "connect-mongo": "^4.6.0",
